--- a/win.WPF.aDrumsManager/Views/TriggerView.xaml
+++ b/win.WPF.aDrumsManager/Views/TriggerView.xaml
@@ -1,22 +1,88 @@
 ﻿<UserControl x:Class="win.WPF.aDrumsManager.Views.TriggerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:win.WPF.aDrumsManager.Views"
              xmlns:mvvm="http://prismlibrary.com/"
-             mc:Ignorable="d" 
+             xmlns:oxy="http://oxyplot.org/wpf"
+             mc:Ignorable="d"
              mvvm:ViewModelLocator.AutoWireViewModel="True"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="600">
     <DockPanel>
         <StackPanel Orientation="Vertical" DockPanel.Dock="Top">
             <DockPanel>
                 <Label Content="Trigger Type:" Width="150" HorizontalContentAlignment="Right" DockPanel.Dock="Left" />
-                <ComboBox ItemsSource="{Binding Path=TriggerTypes, Mode=OneWay}" SelectedItem="{Binding Path=TriggerType, Mode=TwoWay}" />
+                <ComboBox ItemsSource="{Binding Path=TriggerTypes, Mode=OneWay}"
+                          SelectedItem="{Binding Path=TriggerType, Mode=TwoWay}" />
             </DockPanel>
             <DockPanel>
                 <Label Content="Trigger Curve:" Width="150" HorizontalContentAlignment="Right" DockPanel.Dock="Left" />
-                <ComboBox ItemsSource="{Binding Path=CurveTypes, Mode=OneWay}" SelectedItem="{Binding Path=Trigger.Curve, Mode=TwoWay}" />
+                <DockPanel>
+                    <ComboBox DockPanel.Dock="Top" ItemsSource="{Binding Path=CurveTypes, Mode=OneWay}"
+                              SelectedItem="{Binding Path=TriggerCurveType, Mode=TwoWay}" />
+                    <UniformGrid Rows="1">
+                        <oxy:PlotView Model="{Binding Path=TriggerCurvePlot}" Height="200" Width="200" />
+                        <StackPanel DockPanel.Dock="Right" Orientation="Vertical">
+                            <DockPanel>
+                                <Label Content="Horizontal Stretch:" Width="100" HorizontalContentAlignment="Right"
+                                       DockPanel.Dock="Left" />
+                                <DockPanel>
+                                    <TextBlock Text="{Binding ElementName=HorizontalStretchSlider, Path=Value}" Width="20"
+                                               DockPanel.Dock="Right" VerticalAlignment="Center" />
+                                    <Slider Minimum="0" Maximum="100" x:Name="HorizontalStretchSlider" VerticalAlignment="Center"
+                                            Value="{Binding Path=TriggerCurve.HorizontalStretchPercentage, UpdateSourceTrigger=PropertyChanged, FallbackValue=1, TargetNullValue=1}" />
+                                </DockPanel>
+                            </DockPanel>
+                            <DockPanel>
+                                <Label Content="Vertical Stretch:" Width="100" HorizontalContentAlignment="Right"
+                                       DockPanel.Dock="Left" />
+                                <DockPanel>
+                                    <TextBlock Text="{Binding ElementName=VerticalStretchSlider, Path=Value}" Width="20"
+                                               DockPanel.Dock="Right" VerticalAlignment="Center" />
+                                    <Slider Minimum="0" Maximum="100" x:Name="VerticalStretchSlider" VerticalAlignment="Center"
+                                            Value="{Binding Path=TriggerCurve.VerticalStretchPercentage, UpdateSourceTrigger=PropertyChanged, FallbackValue=1, TargetNullValue=1}" />
+                                </DockPanel>
+                            </DockPanel>
+                            <DockPanel>
+                                <Label Content="Horizontal Shift:" Width="100" HorizontalContentAlignment="Right"
+                                       DockPanel.Dock="Left" />
+                                <DockPanel>
+                                    <TextBlock Text="{Binding ElementName=HorizontalShiftSlider, Path=Value}" Width="20"
+                                               DockPanel.Dock="Right" VerticalAlignment="Center" />
+                                    <Slider Minimum="-255" Maximum="255" x:Name="HorizontalShiftSlider" VerticalAlignment="Center"
+                                            Value="{Binding Path=TriggerCurve.HorizontalShift, UpdateSourceTrigger=PropertyChanged, FallbackValue=0, TargetNullValue=0}" />
+                                </DockPanel>
+                            </DockPanel>
+                            <DockPanel>
+                                <Label Content="Vertical Shift:" Width="100" HorizontalContentAlignment="Right"
+                                       DockPanel.Dock="Left" />
+                                <DockPanel>
+                                    <TextBlock Text="{Binding ElementName=VerticalShiftSlider, Path=Value}" Width="20"
+                                               DockPanel.Dock="Right" VerticalAlignment="Center" />
+                                    <Slider Minimum="-255" Maximum="255" x:Name="VerticalShiftSlider" VerticalAlignment="Center"
+                                            Value="{Binding Path=TriggerCurve.VerticalShift, UpdateSourceTrigger=PropertyChanged, FallbackValue=0, TargetNullValue=0}" />
+                                </DockPanel>
+                            </DockPanel>
+                            <ListView ItemsSource="{Binding Path=Modifications}">
+                                <!--<ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <UniformGrid Rows="1">
+                                            <StackPanel Orientation="Horizontal">
+                                                <Label Content="X:" Width="50" HorizontalContentAlignment="Right" />
+                                                <TextBox Text="{Binding Path=Key, Mode=OneWay}" />
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <Label Content="Y:" Width="50" HorizontalContentAlignment="Right" />
+                                                <TextBox Text="{Binding Path=Value}" />
+                                            </StackPanel>
+                                        </UniformGrid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>-->
+                            </ListView>
+                        </StackPanel>
+                    </UniformGrid>
+                </DockPanel>
             </DockPanel>
         </StackPanel>
     </DockPanel>
